AUX_SOURCE_DIRECTORY(. SRC_LIST)

SET(Particles2d_sources
)

SET(Particles2d_headers
)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${Particles2d_sources} ${Particles2d_headers})


# OpenGL dependency
FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(particles2d ${OPENGL_LIBRARIES} )

# GLEW dependency
ADD_LIBRARY(GLEW SHARED IMPORTED)
INCLUDE_DIRECTORIES( ${GLEW_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(particles2d ${GLEW_LIBRARIES} )

# GLFW dependency
ADD_LIBRARY(GLFW SHARED IMPORTED)
INCLUDE_DIRECTORIES( ${GLFW_INCLUDE_DIRS} )
TARGET_LINK_LIBRARIES(particles2d ${GLFW_LIBRARIES} )
